eserde/tests/compile_fail/meta_item_attribute_syntax_bad.rs
#[derive(eserde::Deserialize)]
struct Foo {
    #[serde(default - this parses but is not Meta Item Attribute Syntax, serde errors "expected `,`")]
    field: u32,
}

fn main() {}
